--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -1,4 +1,4 @@
-name: Django-app workflow
+name: Yamdb workflow
 
 on: [push]
 
@@ -40,11 +40,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: xzenoff/web:latest
+          file: api_yamdb/Dockerfile
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
