--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -14,8 +14,7 @@ services:
     env_file:
       - .env
   web:
-    image: xzenoff/web
-    container_name: web
+    image: xzenoff/web:latest
     restart: always
     volumes:
       - static_value:/app/static/
